scaffolded index more, wrote js

--- a/index.html
+++ b/index.html
@@ -22,17 +22,29 @@
         <h1 class="col-md-12 text-center">Crystals Collector!!</h1>
     </header>
     <main class="row">
-        <h2 class="col-md-6 text-center">Target: </h2>
-        <h2 class="col-md-6 text-center">Your Current Total Score:</h2>
-        <div class="col-md-12 text-center">
-            <img src="./assets/images/download (1).jpg" alt="Crystal">
-            <img src="./assets/images/download.jpg" alt="Crysatl">
-            <img src="./assets/images/download (2).jpg" alt="Crystal">
-            <img src="./assets/images/download (3).jpg" alt="Crystal">
+        <div class="row">
+            <h2 id="target" class="col-md-6 text-center"></h2>
+        </div>
+        <div class="row">
+            <h2 id="score" class="col-md-6 text-center"></h2>
+        </div>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <img id="firstCrystal" src="./assets/images/download (1).jpg" alt="Crystal">
+                <img id="secondCrystal" src="./assets/images/download.jpg" alt="Crysatl">
+                <img id="thirdCrystal" src="./assets/images/download (2).jpg" alt="Crystal">
+                <img id="fourthCrystal" src="./assets/images/download (3).jpg" alt="Crystal">
+            </div>
+        </div>
+        <div class="row">
+            <h3 id="winsAndLosses" class="col-md-12"></h3>
         </div>
     </main>
     <footer class="row">
         <p class="col-12-md text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, cumque debitis! Praesentium, facere hic fugiat, et beatae ad ex fugit unde quisquam ratione accusantium voluptate itaque iste expedita eum maiores.</p>
     </footer>
+
+    <!-- javascript file -->
+    <script type="text/javascript" src="./assets/javascript/game.js"></script>
 </body>
 </html>
