scaffolded index more, worked on js

--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
     <main class="row">
         <div class="row">
             <h2 id="target" class="col-md-6 text-center"></h2>
-        </div>
-        <div class="row">
             <h2 id="score" class="col-md-6 text-center"></h2>
         </div>
         <div class="row">
@@ -37,7 +35,7 @@
             </div>
         </div>
         <div class="row">
-            <h3 id="winsAndLosses" class="col-md-12"></h3>
+            <h3 id="winsAndLosses" class="col-md-12 text-center"></h3>
         </div>
     </main>
     <footer class="row">
