--- a/index.html
+++ b/index.html
@@ -39,7 +39,19 @@
         </div>
     </main>
     <footer class="row">
-        <p class="col-12-md text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, cumque debitis! Praesentium, facere hic fugiat, et beatae ad ex fugit unde quisquam ratione accusantium voluptate itaque iste expedita eum maiores.</p>
+        <p class="col-12-md text-center">You will be given a random number at the start of the game.</p>
+        <p class="col-12-md text-center">There are four crystals above. By clicking on a crystal you will 
+            add a specific amount of points to your total score.
+        </p>
+        <p class="col-12-md text-center">You win the game by matching your total score to the random 
+            number. You lose the game if your total score goes above the random number.
+        </p>
+        <p class="col-12-md text-center">The value of each crystal is hidden from you until you click on 
+            it.
+        </p>
+        <p class="col-12-md text-center">Every time the game starts, the value of each crystal will 
+            change.
+        </p>
     </footer>
 
     <!-- javascript file -->
