added styles and background image, worked on index, js, and README

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <!-- reset styles -->
     <link rel="stylesheet" href="./assets/css/reset.css">
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Ovo" rel="stylesheet">
-    <!-- jQuery Library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <!-- Bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- other styles -->
@@ -54,6 +52,8 @@
         </p>
     </footer>
 
+    <!-- jQuery Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- javascript file -->
     <script type="text/javascript" src="./assets/javascript/game.js"></script>
 </body>
