--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </div>
         <div class="row">
             <div class="col-md-12 text-center">
-                <img id="firstCrystal" src="./assets/images/download (1).jpg" alt="Crystal">
+                <img id="firstCrystal" src="./assets/images/download(1).jpg" alt="Crystal">
                 <img id="secondCrystal" src="./assets/images/download.jpg" alt="Crysatl">
-                <img id="thirdCrystal" src="./assets/images/download (2).jpg" alt="Crystal">
-                <img id="fourthCrystal" src="./assets/images/download (3).jpg" alt="Crystal">
+                <img id="thirdCrystal" src="./assets/images/download(2).jpg" alt="Crystal">
+                <img id="fourthCrystal" src="./assets/images/download(3).jpg" alt="Crystal">
             </div>
         </div>
         <div class="row">
@@ -37,19 +37,25 @@
         </div>
     </main>
     <footer class="row">
-        <p class="col-12-md text-center">You will be given a random number at the start of the game.</p>
-        <p class="col-12-md text-center">There are four crystals above. By clicking on a crystal you will 
-            add a specific amount of points to your total score.
-        </p>
-        <p class="col-12-md text-center">You win the game by matching your total score to the random 
-            number. You lose the game if your total score goes above the random number.
-        </p>
-        <p class="col-12-md text-center">The value of each crystal is hidden from you until you click on 
-            it.
-        </p>
-        <p class="col-12-md text-center">Every time the game starts, the value of each crystal will 
-            change.
-        </p>
+        <div class="row">
+            <p class="col-12-md text-center">You will be given a random number at the start of the game.</p>
+        </div>
+        <div class="row">
+            <p class="col-12-md text-center">There are four crystals above. By clicking on a crystal you will 
+            add a specific amount of points to your total score.</p>
+        </div>
+        <div class="row">
+            <p class="col-12-md text-center">You win the game by matching your total score to the random 
+            number. You lose the game if your total score goes above the random number.</p>
+        </div>
+        <div class="row">
+            <p class="col-12-md text-center">The value of each crystal is hidden from you until you click on 
+            it.</p>
+        </div>
+        <div class="row">
+            <p class="col-12-md text-center">Every time the game starts, the value of each crystal will 
+            change.</p>
+        </div>
     </footer>
 
     <!-- jQuery Library -->
