--- a/index.html
+++ b/index.html
@@ -25,11 +25,18 @@
             <h2 id="score" class="col-md-6 text-center"></h2>
         </div>
         <div class="row">
-            <div class="col-md-12 text-center">
-                <img id="firstCrystal" src="./assets/images/download(1).jpg" alt="Crystal">
-                <img id="secondCrystal" src="./assets/images/download.jpg" alt="Crysatl">
-                <img id="thirdCrystal" src="./assets/images/download(2).jpg" alt="Crystal">
-                <img id="fourthCrystal" src="./assets/images/download(3).jpg" alt="Crystal">
+            <div class="col-xs-2"></div>
+            <div class="col-xs-2">
+                <img id="firstCrystal" class="img-responsive" src="./assets/images/download(1).jpg" alt="Crystal">
+            </div>
+            <div class="col-xs-2">
+                <img id="secondCrystal" class="img-responsive" src="./assets/images/download.jpg" alt="Crysatl">
+            </div>
+            <div class="col-xs-2">
+                <img id="thirdCrystal" class="img-responsive" src="./assets/images/download(2).jpg" alt="Crystal">
+            </div>
+            <div class="col-xs-2">
+                <img id="fourthCrystal" class="img-responsive" src="./assets/images/download(3).jpg" alt="Crystal">
             </div>
         </div>
         <div class="row">
